Add project scaffolding: README, LICENSE, PHPUnit config, CI workflow, and development setup
- Added a `README.md` with documentation for project setup, usage, and testing.
- Created a `LICENSE` file (MIT License).
- Configured `phpunit.xml.dist` for unit and integration tests.
- Set up `.gitignore` for commonly ignored files and directories (e.g., `/vendor/`, `.phpunit.cache`).
- Added a GitHub Actions workflow (`tests.yml`) for running tests on PHP 8.3.
- Updated `composer.json` with `require-dev` dependencies (PHPUnit) and test autoloading.

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,17 @@
         "guzzlehttp/guzzle": "^7.4",
         "guzzlehttp/psr7": "^2.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^11.0"
+    },
     "autoload": {
         "psr-4": {
             "Viewtrender\\Youtube\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Viewtrender\\Youtube\\Tests\\": "tests/"
         }
     },
     "config": {
